--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontrobot",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Ontrův personální discord bot",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "opusscript": "0.0.7",
+    "random-seed": "^0.3.0",
     "simple-youtube-api": "^5.2.1",
     "ytdl-core": "^4.1.4"
   }
