--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ontrobot",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Ontrův personální discord bot",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node ."
   },
   "author": "Ontro",
   "license": "ISC",
@@ -14,6 +14,9 @@
     "opusscript": "0.0.7",
     "random-seed": "^0.3.0",
     "simple-youtube-api": "^5.2.1",
-    "ytdl-core": "^4.1.4"
+    "ytdl-core": "^4.4.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.25"
   }
 }
