--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontrobot",
-  "version": "1.3.1",
+  "version": "dev1.4",
   "description": "Ontrův personální discord bot",
   "main": "./dist/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "author": "Ontro",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.2.0",
+    "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "opusscript": "0.0.7",
     "random-seed": "^0.3.0",
