--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Ontro",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.14.25",
     "discord-buttons": "^2.4.1",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
@@ -24,9 +25,8 @@
     "spotify-finder": "^2.1.1",
     "spotify-to-youtube": "^1.0.1",
     "spotify-web-api-node": "^5.0.2",
+    "tsc": "^2.0.3",
     "ytdl-core": "^4.9.1"
   },
-  "devDependencies": {
-    "@types/node": "^14.14.25"
-  }
+  "devDependencies": {}
 }
