--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "discord-buttons": "^2.4.1",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
-    "node": "^14.16.1",
     "node-fetch": "^2.6.1",
+    "node-schedule": "^2.0.0",
     "opusscript": "0.0.7",
     "random-seed": "^0.3.0",
     "simple-youtube-api": "^5.2.1",
@@ -28,5 +28,7 @@
     "tsc": "^2.0.3",
     "ytdl-core": "^4.9.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node-schedule": "^1.3.2"
+  }
 }
