--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontrobot",
-  "version": "dev1.4",
+  "version": "1.4",
   "description": "Ontrův personální discord bot",
   "repository": {
     "type": "git",
