--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord.js": "^14.6.0",
     "dotenv": "^8.2.0",
     "emoji-dictionary": "^1.0.11",
+    "libsodium-wrappers": "^0.7.10",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "opusscript": "0.0.7",
