--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Ontro",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/voice": "^0.16.0",
+    "@discordjs/builders": "^1.10.0",
+    "@discordjs/voice": "^0.16.1",
     "@types/node": "^14.14.25",
+    "discord-api-types": "^0.37.115",
     "discord.js": "^14.6.0",
     "dotenv": "^8.2.0",
     "emoji-dictionary": "^1.0.11",
