--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^1.10.0",
-    "@discordjs/voice": "^0.16.1",
+    "@discordjs/voice": "^0.18.0",
     "@types/node": "^14.14.25",
     "discord-api-types": "^0.37.115",
     "discord.js": "^14.6.0",
@@ -24,11 +24,8 @@
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "opusscript": "0.0.7",
-    "play-dl": "^1.9.6",
     "random-seed": "^0.3.0",
-    "simple-youtube-api": "^5.2.1",
-    "tsc": "^2.0.3",
-    "ytdl-core": "^4.11.2"
+    "tsc": "^2.0.3"
   },
   "devDependencies": {
     "@types/node-schedule": "^1.3.2"
